<resources>
    <string name="app_name">Sampah+</string>
    <string name="name_app">Sampah+</string>
    <string name="text_splash">Foto Sampahmu, \nTemukan Cara Bijak Mengolahnya! \nUbah Sampah Jadi Manfaat dengan Langkah Mudah.</string>
    <string name="text_greetings">Hello</string>
    <string name="icon_salam">👋</string>
    <string name="text_name">Nama</string>
    <string name="hookContent">Pindai Sampahmu! Temukan Cara Cerdas untuk Mengelolanya! </string>
    <string name="hookContent2">Sampah+ kenali sampahmu dan temukan olahan menarik apa yang bisa kamu lakukan</string>
    <string name="buttonPredict">Cari tahu sekarang</string>
    <string name="knowledge">Area Pengetahuan</string>
    <string name="Galeri">Galeri</string>
    <string name="Camera">Camera</string>
    <string name="predict">Prediksi</string>
    <string name="predicthistory">Histori Prediksi</string>
    <string name="fotouser">foto sampah user</string>
    <string name="jenis_sampah">Anorganik </string>
    <string name="context_lama_sampah">Lama terurai</string>
    <string name="lama_sampah">450 Tahun</string>
    <string name="nama_sampah">Botol Plastik</string>
    <string name="desc_scan">Icon scan</string>
    <string name="rekomendasi">Rekomendasi Pengolahan Sampah</string>
    <string name="nama_rekomendasi">Lampion</string>
    <string name="context_nilai_rekomendasi">Estimasi Nilai : </string>
    <string name="nilai_rekomendasi">Rp 30.000 - Rp 40.000</string>
    <string name="tutorial">Cara Membuat</string>
    <string name="tutorial_detail">1. Lorem Ipsum blabla\n2. Lorem Ipsum Blabla\n3. Lorem Ipsum blabla\n4. Lorem Ipsum Blabla</string>
    <string name="title_menu_home">Homepage</string>
    <string name="title_menu_predict">Predict</string>
    <string name="title_menu_profile">Profile</string>
    <string name="title_knowledge">Pengetahuan</string>
    <string name="content">Apa yang ada di </string>
    <string name="tempat_sampah">Tempat Sampah Biru</string>
    <string name="content_2">?</string>
    <string name="content_3">Lorem iPSUM SAFSDAS</string>
    <string name="logo">Logo</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_sandi">Lupa Kata Sandi?</string>
    <string name="masukkan_email">Masukkan email Anda</string>
    <string name="masukkan_password">Masukkan password Anda</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_disini">Daftar di sini</string>
    <string name="daftar">Daftar</string>
    <string name="masukkan_nama">Masukkan nama Anda</string>
    <string name="nama_user">Nama User</string>
    <string name="email_user">Email User</string>
    <string name="edit_profil">Edit profil</string>
    <string name="bahasa">Bahasa</string>
    <string name="tema">Tema</string>
    <string name="keluar">Keluar</string>
    <string name="kirim">Kirim</string>
    <string name="judul_welcome_page">Selamat Datang di Sampah+!</string>
    <string name="pesan_welcome_page">Selamat datang di Sampah+! Kami senang Anda bergabung dengan kami dalam upaya menjaga kebersihan lingkungan. Mari kita mulai perjalanan ini bersama-sama!</string>
    <string name="empty">List kosong</string>
    <string name="empty_history">Tidak Ada Riwayat Prediksi</string>
    <string name="context_tanggal">"Diunggah pada "</string>
    <string name="img_empty_warning">Masukkan gambar terlebih dahulu</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="hint_name">Username</string>
    <string name="text_hint_email">Email</string>
    <string name="text_email">email</string>
    <string name="text_edit">Edit Username</string>
    <string name="text_editEmail">Edit Email</string>
    <string name="logout">Keluar</string>
    <string name="text_save">Simpan</string>
    <string name="text_success_notif">Berhasil update username</string>
    <string name="button_kembali">Tombol Kembali</string>
    <string name="gambar_rekomendasi">Gambar Rekomendasi</string>
    <string name="gambar_tempat_sampah">Gambar Tempat Sampah</string>
    <string name="gambar_jenis_sampah">Gambar Jenis Sampah</string>
</resources>
