<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.recomendation.DetailRecomendationActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/button_kembali"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_img_recomendation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/iv_back"
        app:layout_constraintTop_toBottomOf="@+id/iv_back">

        <ImageView
            android:id="@+id/iv_recomendation"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/gambar_rekomendasi"
            tools:src="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_nama_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/cv_img_recomendation"
        app:layout_constraintTop_toBottomOf="@+id/cv_img_recomendation"
        tools:text="@string/nama_rekomendasi" />

    <TextView
        android:id="@+id/tv_context_nilai"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/gray_500"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_nama_product"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_product"
        android:text="@string/context_nilai_rekomendasi" />

    <TextView
        android:id="@+id/tv_nilai"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/gray_500"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tv_context_nilai"
        app:layout_constraintTop_toTopOf="@+id/tv_context_nilai"
        tools:text="@string/nilai_rekomendasi" />

    <TextView
        android:id="@+id/tv_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/tutorial"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_context_nilai" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_tutorial"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green_100"
        android:padding="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintCircleRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/cv_img_recomendation"
        app:layout_constraintStart_toStartOf="@id/cv_img_recomendation"
        app:layout_constraintTop_toBottomOf="@+id/tv_tutorial">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp">
            <TextView
                android:id="@+id/tv_tutorial_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                tools:text="@string/tutorial_detail" />
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

