<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_predict"
    android:backgroundTint="@color/green_100"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_result"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/fotouser"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_nama_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_bold"
            card_view:layout_constraintStart_toEndOf="@+id/iv_result"
            card_view:layout_constraintTop_toTopOf="@+id/iv_result"
            tools:text="@string/nama_rekomendasi" />

        <TextView
            android:id="@+id/tv_context_nilai"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/gray_500"
            card_view:layout_constraintStart_toStartOf="@+id/tv_nama_product"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_nama_product"
            tools:text="@string/context_nilai_rekomendasi" />

        <TextView
            android:id="@+id/tv_nilai"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textSize="12sp"
            android:textColor="@color/gray_500"
            android:fontFamily="@font/poppins_regular"
            card_view:layout_constraintStart_toEndOf="@+id/tv_context_nilai"
            card_view:layout_constraintTop_toTopOf="@+id/tv_context_nilai"
            tools:text="@string/nilai_rekomendasi" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
